// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKwCoD csXgpC"
    role="button"
  >
    <button
      class="sc-gsDJrp sc-dkPtyc fxrMiX oPMaQ sc-gKckTs gKhcNO"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      Save
      <div
        class="sc-furvIG gTweHO"
      />
      <div
        class="sc-iCfLBT eAbrt"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqiQRQ jsHSFa"
  >
    <div
      class="sc-egiSv dLCumQ"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pVTma hThgDa"
      >
        <hr
          class="sc-crHlIS hMpXYB"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crHlIS hMpXYB"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKwCoD csXgpC"
    role="button"
  >
    <button
      class="sc-gsDJrp sc-dkPtyc fxrMiX cVgOfT sc-gKckTs gKhcNO"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
    >
      Save
      <div
        class="sc-furvIG gTweHO"
      />
      <div
        class="sc-iCfLBT eAbrt"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqiQRQ dVfa-dm"
  >
    <div
      class="sc-ksdxAp fwekpy sc-hBURRC frWYxp fade-transition-enter fade-transition-enter-active"
    />
    <div
      class="sc-egiSv dLCumQ"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pVTma hThgDa"
      >
        <hr
          class="sc-crHlIS hMpXYB"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crHlIS hMpXYB"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKwCoD csXgpC"
    role="button"
  >
    <button
      class="sc-gsDJrp sc-dkPtyc fxrMiX hnPFyL sc-eCImvq eMzSAV"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      Save
    </button>
    <button
      class="sc-gsDJrp sc-dkPtyc fxrMiX hnPFyL sc-jRQAMF cPEfLP"
      data-testid="menu-toggle"
      disabled=""
      font-size="14px"
      font-weight="bold"
    >
      <div
        class="sc-iCfLBT eAbrt"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#B3BAC1"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqiQRQ jsHSFa"
  >
    <div
      class="sc-egiSv dLCumQ"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pVTma hThgDa"
      >
        <hr
          class="sc-crHlIS hMpXYB"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crHlIS hMpXYB"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-hKwCoD csXgpC"
    role="button"
  >
    <button
      class="sc-gsDJrp sc-dkPtyc fxrMiX dqoRHQ sc-eCImvq eMzSAV"
      font-size="14px"
      font-weight="bold"
    >
      Save
    </button>
    <button
      class="sc-gsDJrp sc-dkPtyc fxrMiX dqoRHQ sc-jRQAMF cPEfLP"
      data-testid="menu-toggle"
      font-size="14px"
      font-weight="bold"
    >
      <div
        class="sc-iCfLBT eAbrt"
        size="18"
      >
        <svg
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0,0H24V24H0Z"
            fill="none"
          />
          <path
            d="M13.414,16.886,7.757,11.228,9.644,9.343l3.771,3.772,3.771-3.772,1.887,1.885Z"
            fill="#FDFEFF"
            transform="translate(-1.414 -1.114)"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    class="sc-bqiQRQ dVfa-dm"
  >
    <div
      class="sc-ksdxAp fwekpy sc-hBURRC frWYxp fade-transition-enter fade-transition-enter-active"
    />
    <div
      class="sc-egiSv dLCumQ"
      data-popper-escaped="true"
      data-popper-placement="bottom-start"
      data-popper-reference-hidden="true"
      style="position: absolute; left: 0px; top: 0px;"
    >
      <div
        class="sc-pVTma hThgDa"
      >
        <hr
          class="sc-crHlIS hMpXYB"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-crHlIS hMpXYB"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-iqsfdx jFQiYZ"
        >
          <p
            class="sc-bdvvaa fJTMxE sc-kDThTU"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
